--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -84,6 +84,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "TVMzvNZdaJac"
+   },
+   "source": [
+    "### Notes on the Essay Data\n",
+    "\n",
+    "<ul>\n",
+    "Prior to May 17, 2016, the prompts for the essays were as follows:\n",
+    "<li>__project_essay_1:__ \"Introduce us to your classroom\"</li>\n",
+    "<li>__project_essay_2:__ \"Tell us more about your students\"</li>\n",
+    "<li>__project_essay_3:__ \"Describe how your students will use the materials you're requesting\"</li>\n",
+    "<li>__project_essay_4:__ \"Close by sharing why your project will make a difference\"</li>\n",
+    "</ul>\n",
+    "\n",
+    "\n",
+    "<ul>\n",
+    "Starting on May 17, 2016, the number of essays was reduced from 4 to 2, and the prompts for the first 2 essays were changed to the following:<br>\n",
+    "<li>__project_essay_1:__ \"Describe your students: What makes your students special? Specific details about their background, your neighborhood, and your school are all helpful.\"</li>\n",
+    "<li>__project_essay_2:__ \"About your project: How will these materials make a difference in your students' learning and improve their school lives?\"</li>\n",
+    "<br>For all projects with project_submitted_datetime of 2016-05-17 and later, the values of project_essay_3 and project_essay_4 will be NaN.\n",
+    "</ul>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import nltk\n",
+    "import string\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn import metrics\n",
+    "from sklearn.metrics import roc_curve, auc\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
