loading data and started data analysis to the project donorsChoose

--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -252,10 +252,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "project_data = pd.read_csv('data/train_data.csv')\n",
+    "resource_data = pd.read_csv('data/resources.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points in train data (109248, 17)\n",
+      "************************************************** \n",
+      " **************************************************\n",
+      "The attributes of data : ['Unnamed: 0' 'id' 'teacher_id' 'teacher_prefix' 'school_state'\n",
+      " 'project_submitted_datetime' 'project_grade_category'\n",
+      " 'project_subject_categories' 'project_subject_subcategories'\n",
+      " 'project_title' 'project_essay_1' 'project_essay_2' 'project_essay_3'\n",
+      " 'project_essay_4' 'project_resource_summary'\n",
+      " 'teacher_number_of_previously_posted_projects' 'project_is_approved']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of data points in train data\", project_data.shape)\n",
+    "print(\"*\" * 50, '\\n', \"*\" * 50)\n",
+    "print(\"The attributes of data :\", project_data.columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of data points in resource data (1541272, 4) \n",
+      " ##################################################\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1541272 entries, 0 to 1541271\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count    Dtype  \n",
+      "---  ------       --------------    -----  \n",
+      " 0   id           1541272 non-null  object \n",
+      " 1   description  1540980 non-null  object \n",
+      " 2   quantity     1541272 non-null  int64  \n",
+      " 3   price        1541272 non-null  float64\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 47.0+ MB\n",
+      "None \n",
+      " ##################################################\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>description</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p233245</td>\n",
+       "      <td>LC652 - Lakeshore Double-Space Mobile Drying Rack</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>p069063</td>\n",
+       "      <td>Bouncy Bands for Desks (Blue support pipes)</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>p069063</td>\n",
+       "      <td>Cory Stories: A Kid's Book About Living With Adhd</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>p069063</td>\n",
+       "      <td>Dixon Ticonderoga Wood-Cased #2 HB Pencils, Bo...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>p069063</td>\n",
+       "      <td>EDUCATIONAL INSIGHTS FLUORESCENT LIGHT FILTERS...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24.95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                        description  quantity  \\\n",
+       "0  p233245  LC652 - Lakeshore Double-Space Mobile Drying Rack         1   \n",
+       "1  p069063        Bouncy Bands for Desks (Blue support pipes)         3   \n",
+       "2  p069063  Cory Stories: A Kid's Book About Living With Adhd         1   \n",
+       "3  p069063  Dixon Ticonderoga Wood-Cased #2 HB Pencils, Bo...         2   \n",
+       "4  p069063  EDUCATIONAL INSIGHTS FLUORESCENT LIGHT FILTERS...         3   \n",
+       "\n",
+       "    price  \n",
+       "0  149.00  \n",
+       "1   14.95  \n",
+       "2    8.45  \n",
+       "3   13.59  \n",
+       "4   24.95  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Number of data points in resource data\", resource_data.shape, \"\\n\", \"#\"*50)\n",
+    "print(resource_data.info(), \"\\n\",\"#\"*50)\n",
+    "resource_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "udV9YvZNaJa8"
+   },
+   "source": [
+    "# 1.2 Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    92706\n",
+       "0    16542\n",
+       "Name: project_is_approved, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://matplotlib.org/gallery/pie_and_polar_charts/pie_and_donut_labels.html#sphx-glr-gallery-pie-and-polar-charts-pie-and-donut-labels-py\n",
+    "\n",
+    "y_value_counts = project_data['project_is_approved'].value_counts()\n"
+   ]
   },
   {
    "cell_type": "code",
