Univariate Analysis: School State to the project donorsChoose

--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4   24.95  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -474,8 +474,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "WzssSvN6aJbC"
+   },
+   "source": [
+    "### 1.2.1 Univariate Analysis: School State"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['IN', 'FL', 'AZ', 'KY', 'TX', 'CT', 'GA', 'SC', 'NC', 'CA', 'NY',\n",
+       "       'OK', 'MA', 'NV', 'OH', 'PA', 'AL', 'LA', 'VA', 'AR', 'WA', 'WV',\n",
+       "       'ID', 'TN', 'MS', 'CO', 'UT', 'IL', 'MI', 'HI', 'IA', 'RI', 'NJ',\n",
+       "       'MO', 'DE', 'MN', 'ME', 'WY', 'ND', 'OR', 'AK', 'MD', 'WI', 'SD',\n",
+       "       'NE', 'NM', 'DC', 'KS', 'MT', 'NH', 'VT'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "project_data['school_state'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CA    15388\n",
+       "TX     7396\n",
+       "NY     7318\n",
+       "FL     6185\n",
+       "NC     5091\n",
+       "IL     4350\n",
+       "GA     3963\n",
+       "SC     3936\n",
+       "MI     3161\n",
+       "PA     3109\n",
+       "IN     2620\n",
+       "MO     2576\n",
+       "OH     2467\n",
+       "LA     2394\n",
+       "MA     2389\n",
+       "WA     2334\n",
+       "OK     2276\n",
+       "NJ     2237\n",
+       "AZ     2147\n",
+       "VA     2045\n",
+       "WI     1827\n",
+       "AL     1762\n",
+       "UT     1731\n",
+       "TN     1688\n",
+       "CT     1663\n",
+       "MD     1514\n",
+       "NV     1367\n",
+       "MS     1323\n",
+       "KY     1304\n",
+       "OR     1242\n",
+       "MN     1208\n",
+       "CO     1111\n",
+       "AR     1049\n",
+       "ID      693\n",
+       "IA      666\n",
+       "KS      634\n",
+       "NM      557\n",
+       "DC      516\n",
+       "HI      507\n",
+       "ME      505\n",
+       "WV      503\n",
+       "NH      348\n",
+       "AK      345\n",
+       "DE      343\n",
+       "NE      309\n",
+       "SD      300\n",
+       "RI      285\n",
+       "MT      245\n",
+       "ND      143\n",
+       "WY       98\n",
+       "VT       80\n",
+       "Name: school_state, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = project_data['school_state'].value_counts()\n",
+    "\n",
+    "\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>project_is_approved</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_state</th>\n",
+       "      <th>project_is_approved</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AK</th>\n",
+       "      <th>1</th>\n",
+       "      <td>290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AL</th>\n",
+       "      <th>1</th>\n",
+       "      <td>1506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">AR</th>\n",
+       "      <th>1</th>\n",
+       "      <td>872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>177</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  project_is_approved\n",
+       "school_state project_is_approved                     \n",
+       "AK           1                                    290\n",
+       "             0                                     55\n",
+       "AL           1                                   1506\n",
+       "             0                                    256\n",
+       "AR           1                                    872\n",
+       "             0                                    177"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = pd.DataFrame(project_data.groupby('school_state')['project_is_approved'].value_counts())\n",
+    "\n",
+    "temp.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -502,6 +699,10 @@
    ],
    "source": [
     "# https://www.csi.cuny.edu/sites/default/files/pdf/administration/ops/2letterstabbrev.pdf\n",
+    "\n",
+    "temp = pd.DataFrame(project_data.groupby(\"school_state\")[\"project_is_approved\"].apply(np.mean)).reset_index()\n",
+    "# if you have data which contain only 0 and 1, then the mean = percentage (think about it)\n",
+    "temp.columns = ['state_code', 'num_proposals']\n",
     "\n",
     "temp.sort_values(by=['num_proposals'], inplace=True)\n",
     "print(\"States with lowest % approvals\")\n",
