Univariate Analysis: School State to the project donorsChoose

--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4   24.95  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "       'NE', 'NM', 'DC', 'KS', 'MT', 'NH', 'VT'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "Name: school_state, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,13 +577,12 @@
    "source": [
     "temp = project_data['school_state'].value_counts()\n",
     "\n",
-    "\n",
     "temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +658,7 @@
        "             0                                    177"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -714,10 +713,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#stacked bar plots matplotlib: https://matplotlib.org/gallery/lines_bars_and_markers/bar_stacked.html\n",
+    "\n",
+    "def stack_plot(data, xtick, col2='project_isapproved', col3='total'):\n",
+    "    ind = np.arange(data.shape[0])\n",
+    "    \n",
+    "    plt.figure(figsize=(20,5))\n",
+    "    p1 = plt.bar(ind, data[col3].values)\n",
+    "    p2 = plt.bar(ind, data[col2].values)\n",
+    "    \n",
+    "    plt.ylabel('Projects')\n",
+    "    plt.title('Number of projects approved vs rejected')\n",
+    "    plt.xticks(ind, list(data[xtick].values))\n",
+    "    plt.legend((p1[0], p2[0]), ('tatol', 'accepted'))\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def univariate_barplots(data, col1, col2='project_is_approved', top=False):\n",
+    "    # Count number of zeros in dataframe python: https://stackoverflow.com/a/51540521/4084039\n",
+    "    temp = pd.DataFrame(project_data.groupby(col1)[col2],agg(lambda x: x.eq(1).sum())).reset_index()\n",
+    "    \n",
+    "    # Pandas dataframe grouby count: https://stackoverflow.com/a/19385591/4084039\n",
+    "    temp['total'] = pd.DataFrame(project_data.groupby(col2)[col2].agg({'total':'count'})).reset_index()['total']\n",
+    "    temp['Avg'] = pd.DataFrame(project_data.groupby(col1)[col2].agg({'Avg':'mean'})).reset_index()['Avg']\n",
+    "\n",
+    "    temp.sort_values(by=['total'], inplace=True, ascending=False)\n",
+    "\n",
+    "    if top:\n",
+    "        temp = temp[0:top]\n",
+    "    stack_plot(temp, xtick=col1, col2=col2, col3='total')\n",
+    "    print(temp.head(5))\n",
+    "    print(\"=\"*50)\n",
+    "    print(temp.tail(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'agg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-45-2cace8f16608>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0munivariate_barplots\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mproject_data\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'school_state'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'project_is_approved'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;32mFalse\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32m<ipython-input-44-a8b6d95e0ba7>\u001B[0m in \u001B[0;36munivariate_barplots\u001B[1;34m(data, col1, col2, top)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mdef\u001B[0m \u001B[0munivariate_barplots\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcol1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcol2\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m'project_is_approved'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtop\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;32mFalse\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      2\u001B[0m     \u001B[1;31m# Count number of zeros in dataframe python: https://stackoverflow.com/a/51540521/4084039\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 3\u001B[1;33m     \u001B[0mtemp\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mDataFrame\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mproject_data\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgroupby\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mcol1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mcol2\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0magg\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;32mlambda\u001B[0m \u001B[0mx\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mx\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0meq\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msum\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mreset_index\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m     \u001B[1;31m# Pandas dataframe grouby count: https://stackoverflow.com/a/19385591/4084039\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'agg' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "univariate_barplots(project_data, 'school_state', 'project_is_approved', False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "### 1.2.2 Univariate Analysis: teacher_prefix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'project_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-3-18d4c7cc035a>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0munivariate_barplots\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mproject_data\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'teacher_prefix'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m'project_is_approved'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtop\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;32mFalse\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m: name 'project_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "univariate_barplots(project_data, 'teacher_prefix', 'project_is_approved', top=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
