--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -2789,13 +2789,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def decontracted (phrase):\n",
     "    # specific\n",
     "    phrase = re.sub(r\"won't\", \"will not\", phrase)\n",
-    "    phrase"
+    "    phrase = re.sub(r\"can't\", \"can not\", phrase)\n",
+    "\n",
+    "    # general\n",
+    "    phrase = re.sub(r\"n\\'t\", \" not\", phrase)\n",
+    "    phrase = re.sub(r\"\\'re\", \" are\", phrase)\n",
+    "    phrase = re.sub(r\"\\'s\", \" is\", phrase)\n",
+    "    phrase = re.sub(r\"\\'d\", \" would\", phrase)\n",
+    "    phrase = re.sub(r\"\\'ll\", \" will\", phrase)\n",
+    "    phrase = re.sub(r\"\\'t\", \" not\", phrase)\n",
+    "    phrase = re.sub(r\"\\'ve\", \" have\", phrase)\n",
+    "    phrase = re.sub(r\"\\'m\", \" am\", phrase)\n",
+    "    phrase = re.sub(r\"\\\\r\", ' ', phrase)\n",
+    "    phrase = re.sub(r'\\\\\"', ' ', phrase)\n",
+    "    phrase = re.sub(r\"\\\\n\", ' ', phrase)\n",
+    "    return phrase"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'project_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-4-5645e7b8f59f>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0msent\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdecontracted\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mproject_data\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'essay'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m20000\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msent\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"#\"\u001B[0m\u001B[1;33m*\u001B[0m\u001B[1;36m50\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'project_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sent = decontracted(project_data['essay'].values[20000])\n",
+    "print(sent)\n",
+    "print(\"#\"*50)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# # \\r \\n \\t remove from string python: http://texthandler.com/info/remove-line-breaks-python/\n",
+    "# sent = sent.replace('\\\\r', ' ')\n",
+    "# sent = sent.replace('\\\\\"', ' ')\n",
+    "# sent = sent.replace('\\\\n', ' ')\n",
+    "# print(sent)\n",
+    "# "
    ],
    "metadata": {
     "collapsed": false,
