--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -2792,6 +2792,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
+    "# https://stackoverflow.com/a/47091490/4084039\n",
     "def decontracted (phrase):\n",
     "    # specific\n",
     "    phrase = re.sub(r\"won't\", \"will not\", phrase)\n",
@@ -2809,6 +2810,7 @@
     "    phrase = re.sub(r\"\\\\r\", ' ', phrase)\n",
     "    phrase = re.sub(r'\\\\\"', ' ', phrase)\n",
     "    phrase = re.sub(r\"\\\\n\", ' ', phrase)\n",
+    "    phrase = re.sub('[A-Za-z0-9]+', ' ', phrase)\n",
     "    return phrase"
    ],
    "metadata": {
@@ -2848,7 +2850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# # \\r \\n \\t remove from string python: http://texthandler.com/info/remove-line-breaks-python/\n",
@@ -2856,8 +2858,48 @@
     "# sent = sent.replace('\\\\\"', ' ')\n",
     "# sent = sent.replace('\\\\n', ' ')\n",
     "# print(sent)\n",
-    "# "
+    "#"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 're' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-6-edb8f1d6777f>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m#remove spacial character: https://stackoverflow.com/a/5843547/4084039\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0msent\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mre\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msub\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'[^A-Za-z0-9]+'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m' '\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msent\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msent\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 're' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#remove spacial character: https://stackoverflow.com/a/5843547/4084039\n",
+    "# sent = re.sub('[^A-Za-z0-9]+', ' ', sent)\n",
+    "# print(sent)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
