--- a/DonorsChoose.org_prj/Untitled.ipynb
+++ b/DonorsChoose.org_prj/Untitled.ipynb
@@ -933,7 +933,7 @@
    "source": [
     "#stacked bar plots matplotlib: https://matplotlib.org/gallery/lines_bars_and_markers/bar_stacked.html\n",
     "\n",
-    "def stack_plot(data, xtick, col2='project_isapproved', col3='total'):\n",
+    "def stack_plot(data, xtick, col2='project_is_approved', col3='total'):\n",
     "    ind = np.arange(data.shape[0])\n",
     "    \n",
     "    plt.figure(figsize=(20,5))\n",
