Titanic project - updating by executing various tasks

--- a/titanic/Untitled.ipynb
+++ b/titanic/Untitled.ipynb
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1274,18 +1274,28 @@
        "2       0.742038"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "train[['Gender', 'Survived']].groupby(['Gender']).mean().sort_values(by='Survived', ascending=True)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insight\n",
+    "    Female which is represented by 2 have the higer percent of survival with 74.20 % compare to their male counterpart"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1365,7 +1375,7 @@
        "3      0.600000"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1375,8 +1385,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insight:\n",
+    "    Passenger in which parent and children are 3 have 60% of survival "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1456,13 +1474,21 @@
        "1      0.535885"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train[['SibSp', 'Survived']].groupby(['SibSp']).mean().sort_values(by='Survived', ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Insight:\n",
+    "    Passenger "
    ]
   },
   {
@@ -1475,9 +1501,7 @@
    "source": [
     "## Analyzing Data by Visualization\n",
     "\n",
-    "Inorder to understand who would have had a better probability of survival, we should visualize the patients who survived based on age, passenger class and etc.\n",
-    "\n",
-    "\n"
+    "Inorder to understand who would have had a better probability of survival, we should visualize the patients who survived based on age, passenger class and etc.\n"
    ]
   },
   {
@@ -1489,7 +1513,25 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.countplot(train['Survived'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "age_hist = sns.FacetGrid(train, col='Survived')\n",
+    "age_hist.map(plt.hist, 'Age')\n",
+    "age_hist.set_ylabels('Number')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
