Titanic project - Executing KNN, Logistic Regression and Cross-validation

--- a/titanic/Untitled.ipynb
+++ b/titanic/Untitled.ipynb
@@ -3037,7 +3037,7 @@
    ],
    "source": [
     "knn_acc = round(knn.score(x_train,y_train)*100, 2)\n",
-    "print(\"Accuracy: \", knn_acc,'%')"
+    "print(\"Accuracy: \", knn_acc,'%')\n"
    ]
   },
   {
