Titanic project - Executing KNN, Logistic Regression, RandomForest, and Cross-validation

--- a/titanic/Untitled.ipynb
+++ b/titanic/Untitled.ipynb
@@ -3388,146 +3388,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn import svm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf_clf = RandomForestClassifier(n_estimators=250,random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "params_grid = {\"max_features\" : [4,5,6,7,8,9,10],\n",
-    "              \"min_samples_split\": [2, 3, 10],\n",
-    "              }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grid_search = GridSearchCV(RandomForestClassifier(), params_grid,\n",
-    "                           n_jobs=-1, cv=5, scoring='accuracy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, estimator=RandomForestClassifier(), n_jobs=-1,\n",
-       "             param_grid={'max_features': [4, 5, 6, 7, 8, 9, 10],\n",
-       "                         'min_samples_split': [2, 3, 10]},\n",
-       "             scoring='accuracy')"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid_search.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'max_features': 5, 'min_samples_split': 10}"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grid_search.best_params_ "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestClassifier(max_features=5, min_samples_split=10)"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cvrf_clf = grid_search.best_estimator_\n",
+    "svm = svm.SVC(kernel='linear', C=100)\n",
     "\n",
-    "cvrf_clf"
+    "svm.fit(x_train, y_train)\n",
+    "svm_pred = svm.predict(x_test)\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8515185601799775"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cvrf_clf.predict(x_test)\n",
-    "\n",
-    "\n",
-    "cvrf_clf.score(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
