--- a/titanic/Untitled.ipynb
+++ b/titanic/Untitled.ipynb
@@ -3549,7 +3549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -3612,6 +3612,43 @@
     "ax.set_ylabel('Predicted Label', fontsize=13)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-125-2507e0bb4f80>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mxgb\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mxgboost\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m: 'module' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "xgb = xgboost()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
